--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -18,10 +18,9 @@
             <p>nombre:  <%= user.nombre %></p>
             <p>apellido: <%= user.apellido %></p>
             <p>email: <%= user.email %></p>
-            <h1><p class="centrar"><a href="/users/editarUsuario">Edita tu usuario</a></p></h1>
+            <h1><p class="centrar"><a href="/users/editarUsuario/<%= user.id %> ">Edita tu usuario</a></p></h1>
             <h1><p class="centrar"><a href="/users/cerrarSesion">Cerrar Sesion</a></p></h1>
         </section>
-        
 </article>
 <footer>
     
