--- a/src/views/partials/product.ejs
+++ b/src/views/partials/product.ejs
@@ -1,5 +1,5 @@
 <a class="swiper-slide product" href="/product/productDetail/<%=dato.id%>">
-    <img class="product-img" src="../images/<%=dato.imagen%>">
+    <img class="product-img" src="../images/catalogo/<%=dato.imagen%>">
     <span class="product-info">
         <h4>Precio $<%=dato.precio%></h4>
         <h2><%=dato.precio%></h2>
