--- a/src/views/users/editarUsuario.ejs
+++ b/src/views/users/editarUsuario.ejs
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Formulario de registro</title>
+    <link rel="stylesheet" href="/css/editarUsuario.css">
 </head>
 <body>
-    <h1>holaaaaa</h1>
+    <form action="/users/editarUsuario/<%=user.id%>" method="post">
+        <h1>EDITAR USUARIO</h1>
+        <input type="text" name="nombre" placeholder="Nombre Nuevo" value="<%=user.nombre%>">
+        <input type="text" name="apellido" placeholder="Apellido Nuevo" value="<%=user.apellido%>">
+        <button type="submit">Editar Usuario </button>
+    </form>
 </body>
 </html>
