--- a/src/views/users/perfil.ejs
+++ b/src/views/users/perfil.ejs
@@ -12,20 +12,27 @@
 <body>
     
 </div>
-<article>
-         <img class="category-img" src="/images/users/<%= user.foto %>">
-        <section>
-            <p>nombre:  <%= user.nombre %></p>
-            <p>apellido: <%= user.apellido %></p>
-            <p>email: <%= user.email %></p>
-            <h1><p class="centrar"><a href="/users/editarUsuario/<%= user.id %> ">Edita tu usuario</a></p></h1>
-            <h1><p class="centrar"><a href="/users/cerrarSesion">Cerrar Sesion</a></p></h1>
-        </section>
-</article>
-<footer>
+<main>
     
+<article class="articulo-imagen">
+    <section>
+        <img src="/images/users/<%= user.foto %>">
+    </section>
 
-</footer>
+</article>
+
+</main>
+
+<header>
+    <article class="articulo-datos">
+        <p>nombre:  <%= user.nombre %></p>
+        <p>apellido: <%= user.apellido %></p>
+        <p>email: <%= user.email %></p>
+        <h1><p class="centrar"><a href="/users/editarUsuario/<%= user.id %> ">Edita tu usuario</a></p></h1>
+        <h1><p class="centrar"><a href="/users/cerrarSesion">Cerrar Sesion</a></p></h1>
+</article>
+</header>
+    
 
 
 </body>
