--- a/public/css/createProduct.css
+++ b/public/css/createProduct.css
@@ -104,5 +104,12 @@ button {
 
 button:hover, #custom-file-upload:hover {
     background-color: white;
-    transition: 500ms
+    transition: 500ms;
+    margin-left: 20px;
+}
+
+p{
+    margin-top: 10px;
+    font-size: 20px;
+    color: #00FF00;
 }
