--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,8 @@
 <header>
     <nav>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11">
+        </script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <ul>
             <!-- hacer un if aca para mostrar algunas cosas sobre la barra de navegacion al usuario-->
             <% if (locals.user) { %>
