--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -5,31 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de registro</title>
+    
     <link rel="stylesheet" href="/css/register.css">
+    <script src="/js/validatorRegister-front.js"></script>
 </head>
 <body>
-    <form action="/users/register" method="post" enctype="multipart/form-data">
+    <form action="/users/register" method="post" enctype="multipart/form-data" id="formularioRegister">
         <h1>REGISTRO DE CUENTA</h1>
-        <input type="text" name="nombre" placeholder="Nombre" value="<%= locals.oldData ? oldData.nombre : null %>" >
+        <div class="errorsRegister">
+            <ul> </ul>
+        </div>
+        <input type="text" id="nombreRegister" name="nombre" placeholder="Nombre" value="<%= locals.oldData ? oldData.nombre : null %>" >
         <% if (locals.errors && errors.nombre) { %>
             <div>
                 <p><%= errors.nombre.msg %></p> 
             </div>
         <% } %>
-        <input type="text" name="apellido" placeholder="Apellido"  value="<%= locals.oldData ? oldData.apellido : null %>" >
+        <input type="text" id="apellidoRegister" name="apellido" placeholder="Apellido"  value="<%= locals.oldData ? oldData.apellido : null %>" >
         <% if (locals.errors && errors.apellido) { %>
             <div>
                 <p><%= errors.apellido.msg %></p> 
             </div>
         <% } %>
         
-        <input type="text" name="email"  placeholder="Correo" value="<%= locals.oldData ? oldData.email : null %>" autocomplete="off" >
+        <input type="text" id="emailRegister" name="email"  placeholder="Correo" value="<%= locals.oldData ? oldData.email : null %>" autocomplete="off" >
         <% if (locals.errors && errors.email) { %>
             <div>
                 <p><%= errors.email.msg %></p> 
             </div>
         <% } %>
-        <input type="password" name="clave" placeholder="Contraseña" value="<%= locals.oldData ? oldData.clave : null %>" autocomplete="off">
+        <input type="password" id="contraseñaRegister" name="clave" placeholder="Contraseña" value="<%= locals.oldData ? oldData.clave : null %>" autocomplete="off">
         <% if (locals.errors && errors.clave) { %>
             <div>
                 <p><%= errors.clave.msg %></p> 
@@ -38,7 +43,7 @@
 
         <label for="product-image" class="archivo">
              <h3>Elige una imagen de perfil </h3> 
-            <input  type="file" name="imagen-usuario" accept=".png,.jpg,.webp,.jpeg,.gif" class="input-imagen"></input>
+            <input type="file" id="imagenRegister" name="imagen-usuario" accept=".png,.jpg,.webp,.jpeg,.gif" class="input-imagen"></input>
         </label>
         <span><p>¿Tienes una cuenta? </p><a href="/login">Inicia Sesión.</a></span>
         <button type="submit">SIGUIENTE</button>
