validando errores del front

--- a/public/css/createProduct.css
+++ b/public/css/createProduct.css
@@ -114,6 +114,11 @@ p{
     color: #00FF00;
 }
 
-.errorsCreateProduct ul {
+.errorsNombreCreateProduct {
+    margin: 20px;
     color: white;
+}
+.errorsDescripcionCreateProduct {
+    margin: 20px;
+    color: white
 }
