--- a/src/views/product/createProduct.ejs
+++ b/src/views/product/createProduct.ejs
@@ -11,9 +11,6 @@
 <body>
     <article>
         <form action="/product/createProduct" method="post" enctype="multipart/form-data" id="formularioCreateProduct">
-            <div class="errorsCreateProduct">
-                <ul> </ul>
-            </div>
             <label for="nombre">Nombre del producto</label>
             <input type="text" name="nombre" id="product-name" value="<%= locals.oldData ? oldData.nombre : null %>">
             <% if (locals.errors && errors.nombre) { %>
@@ -21,7 +18,10 @@
                     <p><%= errors.nombre.msg %></p> 
                 </div>
             <% } %>
-
+            <div class="errorsNombreCreateProduct">
+                <ul> </ul>
+            </div>
+             
             <label for="descricion">Descripcion del producto</label>
             <input type="text" name="descripcion" id="product-description"></input>
             <% if (locals.errors && errors.descripcion) { %>
@@ -29,7 +29,9 @@
                     <p><%= errors.descripcion.msg %></p> 
                 </div>
             <% } %>
-
+            <div class="errorsDescripcionCreateProduct">
+                <ul> </ul>
+            </div>
             <label for="precio">Precio del producto</label>
             <input type="number" name="precio" id="product-price" value="<%= locals.oldData ? oldData.precio : null %>">
             <% if (locals.errors && errors.precio) { %>
