--- a/express/src/views/users/register.ejs
+++ b/express/src/views/users/register.ejs
@@ -62,7 +62,7 @@
             <% } %>    
             
         </label>
-        <span><p>¿Tienes una cuenta? </p><a href="/login">Inicia Sesión.</a></span>
+        <span><p>¿Tienes una cuenta? </p><a href="/users/login">Inicia Sesión.</a></span>
         <button type="submit">SIGUIENTE</button>
     </form>
 </body>
