--- a/express/public/css/productDetail.css
+++ b/express/public/css/productDetail.css
@@ -181,6 +181,21 @@ label {
     margin-left: 16px;
     padding: 8px;
 }
+.contenedorBotones {
+    display: flex;
+    height: 100px;
+    align-items: center;
+    width: 100%;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.estiloBoton {
+    padding: 1rem;
+    background: #f0f0f0;
+    border-radius: 20px;
+    border: 2px solid;
+}
 
 @media (max-width: 1400px) {
     #ProdImg {
